Fixed the wrong colour being used when searching

--- a/style.css
+++ b/style.css
@@ -427,6 +427,7 @@ h2{
     height:85%;
     width:100%;
     overflow-y:auto;
+    background-color:#ffffff;
    
 
 }
